2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>

	* README (Important files): Add AUTHORS.
	(Project details): Adjust depends.
	(References): Minot updates.

	* Makefile ($(PACKAGE).elc): Use --long options.

2011-12-07 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-devel-compose-git-import): Fix
	byte compile.
	(epackage-info-mode-font-lock-keywords): Allow dash
	in header names.
	(epackage--layout-mapping): Add *-epkg-* to all files.
	(epackage-devel-compose-main): Use `epackage-layout-mapping-file'.
	(epackage-loader-file-insert-header): Mention M-x command.
	(epackage-combine-files): Check for non-existing files.
	(epackage-initialize): Call `epackage-sources-list-build'.
	(epackage--directory-exclude-regexp): Add .nosearch to docstring.

2011-11-19 Sat  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el: Adjust Tag descriptions of custom variables.
	Patch thanks to David Ross <H.David.Ross@gmail.com>.
	Add autoload stanzas to more variables.
	(epackage-assoc): Rename from `epackage-asscoc'.
	(epackage-narrow-to-field): implement function.
	(epackage-field-forward): New.
	(epackage-field-backward): New.
	(epackage-field-name): Add arg region.
	(epackage-autoload-create-on-file): Simplify function by
	removing parameters no-show, no-desc and no-path. Make
	buffer parameter required.
	(epackage--buffer-autoload): New.
	(epackage-autoload-create-on-file): Update changes
	according to `epackage-autoload-create-on-file'.
	(epackage--root-directory): signal error if no root found and
	suggest creating directory ~/.emacs.d
	(epackage-layout-file-name): Check type for error.
	(epackage--layout-mapping): Add synonym mapping: autoloads.
	(epackage-make-directory): New.
	(epackage-with-buffer-autoload): New.
	(epackage-devel-generate-autoloads): Implement.
	(epackage-directory-file-list): Exclude [#~] fles.
	(epackage-devel-generate-loaddefs): Implement.
	(epackage--layout-template-info): New.
	(epackage-devel-information-buffer): New.